--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,15 @@
 {
-"name":"GYM",
-"short_name":"GYM",
-"start_url":"index.html",
-"display":"standalone",
-"background_color":"#000000",
-"theme_color":"#000000",
-"icons":[]
+  "name": "GYM",
+  "short_name": "GYM",
+  "start_url": "./index.html",
+  "display": "standalone",
+  "background_color": "#000000",
+  "theme_color": "#000000",
+  "icons": [
+    {
+      "src": "icon.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+  ]
 }
